feat(server): :sparkles: created collections, snippets and friendship functionalities
implemented the collections feature, the snippets feature as well as the user management feature.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "files.readonlyInclude": {
     "**/routeTree.gen.ts": true
   },
-  "conventionalCommits.scopes": ["server"]
+  "conventionalCommits.scopes": ["server"],
+  "cSpell.words": ["snippetly"]
 }
