feat(server): :recycle: refactored service layer of each module
passed request object to each service in each module to give it full control over the request object, also auth feature has been extended to include refresh token rotation.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
     "**/routeTree.gen.ts": true
   },
   "conventionalCommits.scopes": ["server"],
-  "cSpell.words": ["snippetly"]
+  "cSpell.words": ["JWTOKEN", "snippetly"]
 }
