feat(client): :sparkles: implemented auth feature on the client with refresh token rotation in place
authentication is working as expected, generating access tokens by refresh tokens is working with all requests, cors are handled on the sever, implemented most of the dashboard UI.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,6 @@
   "files.readonlyInclude": {
     "**/routeTree.gen.ts": true
   },
-  "conventionalCommits.scopes": ["server"],
+  "conventionalCommits.scopes": ["server", "client"],
   "cSpell.words": ["JWTOKEN", "snippetly"]
 }
