--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "highlight.js": "^11.11.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
