--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc ",
+    "build": "tsc",
     "start": "node --env-file=.env dist/index.js",
     "dev": "NODE_ENV=development tsx watch --tsconfig ./tsconfig.json --env-file=.env src/index.ts",
     "db:generate": "npx drizzle-kit generate --config=./src/config/drizzle.config.ts",
     "db:push": "npx drizzle-kit push --config=./src/config/drizzle.config.ts",
     "db:studio": "npx drizzle-kit studio --config=./src/config/drizzle.config.ts",
-    "db:drop": "npx drizzle-kit drop --config=./src/config/drizzle.config.ts",
-    "db:seed": "tsx --env-file=.env.local ./src/config/seed.ts"
+    "db:drop": "npx drizzle-kit drop --config=./src/config/drizzle.config.ts"
   },
   "keywords": [],
   "author": "mohamed shaban",
@@ -26,17 +25,12 @@
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
     "express": "^5.1.0",
-    "express-list-routes": "^1.3.1",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "nanoid": "^5.1.5",
     "nodemailer": "^7.0.6",
     "picocolors": "^1.1.1",
-    "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
