--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
   "name": "snippetly-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "the server side api of the snippetly application.",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node --env-file=.env dist/index.js",
+    "build": "swc ./src/* --out-dir dist",
+    "start": "NODE_ENV=production node --env-file=.env --experimental-strip-types --experimental-transform-types ./dist/src/index.js",
     "dev": "NODE_ENV=development tsx watch --tsconfig ./tsconfig.json --env-file=.env src/index.ts",
     "db:generate": "npx drizzle-kit generate --config=./src/config/drizzle.config.ts",
     "db:push": "npx drizzle-kit push --config=./src/config/drizzle.config.ts",
