--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
-    "strict": true,
     // Treat files as modules even if it doesn't use import/export
     "moduleDetection": "force",
-
-    // Ignore module structure
-    "module": "Preserve",
 
     // Allow JSON modules to be imported
     "resolveJsonModule": true,
@@ -13,21 +9,29 @@
     // Allow JS files to be imported from TS and vice versa
     "allowJs": true,
 
-    // Use correct ESM import behavior
-    "esModuleInterop": true,
-
     // Disallow features that require cross-file awareness
     "isolatedModules": true,
 
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
 
+    "lib": ["esnext"],
     "types": ["node", "express"],
     "typeRoots": ["./src/common/types", "./node_modules/@types"],
 
-    "skipLibCheck": true,
+    "outDir": "./dist",
 
-    "outDir": "./dist"
+    "target": "esnext", // Or a specific ES version like "es2022"
+    "module": "esnext", // Or "esnext" for broader compatibility
+    "rootDir": "./src", // Source directory for TypeScript files
+    "esModuleInterop": true, // Enables default imports for CommonJS modules
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "moduleResolution": "bundler", // Or "node" if "module": "esnext"
+    "verbatimModuleSyntax": true, // Recommended for strict module syntax,
+    "noEmit": true,
+    "allowImportingTsExtensions": true
   },
   "include": ["src", "./src/common/types"]
 }
