--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "snippetly-server",
   "version": "1.0.0",
   "description": "the server side api of the snippetly application.",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "type": "module",
   "scripts": {
     "build": "swc ./src/* --out-dir dist",
@@ -19,6 +19,9 @@
   "packageManager": "pnpm@10.13.1",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.13.5",
+    "@swc/plugin-transform-imports": "^9.1.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
