refactor: :recycle: build fixing
fixed upload avatar endpoint on vercel because it doesn't support writing to file system so i used uploadthing.

--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.131.5",
     "@tanstack/router-plugin": "^1.121.2",
+    "@uploadthing/react": "^7.3.3",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
