--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "dist/src/index.js",
   "type": "module",
   "scripts": {
+    "build": "swc src --out-dir dist",
     "start": "NODE_ENV=production node --env-file=.env --experimental-strip-types --experimental-transform-types ./dist/src/index.js",
     "dev": "NODE_ENV=development tsx watch --tsconfig ./tsconfig.json --env-file=.env src/index.ts",
     "db:generate": "npx drizzle-kit generate --config=./src/config/drizzle.config.ts",
@@ -34,6 +35,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "picocolors": "^1.1.1",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.5"
   },
   "devDependencies": {
