feat(server): server updates; create vercel.ts file that exports the server as default.

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,6 +4,6 @@
   "routes": [
     { "src": "/static/(.*)", "dest": "/public/$1" },
     { "src": "/uploads/(.*)", "dest": "/public/uploads/$1" },
-    { "src": "/(.*)", "dest": "/dist/index.js" }
+    { "src": "/(.*)", "dest": "/dist/vercel.js" }
   ]
 }
