feat(server): server updates; another build fix.

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
-  "builds": [],
+  "buildCommand": "pnpm install && pnpm run build",
+  "builds": [{ "src": "dist/vercel.js", "use": "@vercel/node" }],
   "routes": [
-    { "src": "/static/(.*)", "dest": "/public/$1" },
-    { "src": "/uploads/(.*)", "dest": "/public/uploads/$1" },
-    { "src": "/(.*)", "dest": "/dist/vercel.js" }
+    { "src": "/static/(.)", "dest": "/public/$1" },
+    { "src": "/uploads/(.)", "dest": "/public/uploads/$1" },
+    { "src": "/(.*)", "dest": "dist/vercel.js" }
   ]
 }
