--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"pnpm dev:sw\" \"vite --port 3000\"",
+    "dev": "vite --port 3000",
     "start": "vite --port 3000",
     "build": "vite build",
-    "build:sw": "esbuild src/lib/sw/sw.ts --bundle --format=esm --target=es2022 --outfile=public/sw.js --minify",
-    "dev:sw": "esbuild src/lib/sw/sw.ts --bundle --format=esm --target=es2022 --outfile=public/sw.js --watch",
     "serve": "vite preview",
     "test": "vitest run",
     "lint": "eslint",
@@ -64,8 +62,6 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "concurrently": "^9.2.1",
-    "esbuild": "^0.25.10",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
     "tw-animate-css": "^1.3.8",
